discussion/kv_engine/168378/168378_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50286: Handle pre-7.1 CommitSyncWrite metadata

Prior to MB-48033 (Neo), CommittedSyncWrites were stored on-disk as
queue_op::commit_sync_write and V3 metadata. However this was
optimized in MB-48033 to store ad queue_op::mutation and V1 metadata
(as V1 is smaller).

However, we did not fully handle reading existing V3 commit_sync_write
from disk - for example during an offline upgrade. As a consequence
attempting to read such items from disk (for example during warmup)
results in a failure to make an Item:

     CRITICAL (b1) WarmupBackfillTask::run(): caught exception while running backfill - aborting warmup: makeItemFromDocInfo: Invalid queue_op:mutation

This is because while we allow the V3::commit_sync_write to be decoded
from disk in MetaData::MetaDataV3, we transparently convert the Commit
operation to mutation:

    queue_op getDurabilityOp() const {
        switch (operation) {
        ...
        case Operation::Commit:
            return queue_op::mutation;

Logically this is fine, however that falls foul of the logic in
makeItemFromDocInfo() which attempts to extract durabiliuty-related
information from V3 metadata, and doesn't exist to encounter a
queue_op::mutation (as per the above exception).

Address by accepting queue_op::mutation as a valid V3 durability op.

Change-Id: I16d2bd4891e232585630ff97b1052c10541bbfba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-07 14:52:29.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-07 15:02:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14691/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:9: error: call to implicitly-deleted default constructor of "union V2V3Union" [clang-diagnostic-error]
        MetaData() : cas(0), expiry(0), flags(0), ext1(0), ext2(0) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:33:13: note: explicitly defaulted function was implicitly deleted here
            V2V3Union() = default;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:44:15: note: default constructor of "V2V3Union" is implicitly deleted because variant field "v3" has a non-trivial default constructor
            } v3;
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14691/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14691/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42656/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests/mock/mock_couch_kvstore.h(19): error C2280: "MockCouchRequest::MetaData::V2V3Union::V2V3Union(void)": attempting to reference a deleted function ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42656/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4333/ : FAILURE

Compile error at [2022-01-07T14:54:00.423Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:9:
error: call to implicitly-deleted default constructor of "union V2V3Union"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4333/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16343/ : FAILURE

Compile error at [2022-01-07T14:54:49.767Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:66:
error: use of deleted function ?MockCouchRequest::MetaData::V2V3Union::V2V3Union()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16343/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16638/ : FAILURE

Compile error at [2022-01-07T14:54:36.164Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:66:
error: use of deleted function ?MockCouchRequest::MetaData::V2V3Union::V2V3Union()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17430/ : FAILURE

Compile error at [2022-01-07T14:53:47.525Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:9:
error: call to implicitly-deleted default constructor of "union V2V3Union"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17430/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15493/ : FAILURE

Compile error at [2022-01-07T14:56:10.970Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:9:
error: call to implicitly-deleted default constructor of "union V2V3Union"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15493/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24757/ : FAILURE

Compile error at [2022-01-07T15:00:24.355Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:9:
error: call to implicitly-deleted default constructor of "union V2V3Union"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24757/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4389/ : FAILURE

Compile error at [2022-01-07T14:55:49.521Z] ../kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:19:66:
error: use of deleted function ?MockCouchRequest::MetaData::V2V3Union::V2V3Union()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4389/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36148/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13522/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
